made more updates for better performance